--- a/portal-frontend/tsconfig.json
+++ b/portal-frontend/tsconfig.json
@@ -17,10 +17,16 @@
     "moduleResolution": "node",
     "importHelpers": true,
     "esModuleInterop": true,
-    "target": "es2020",
+    "target": "ES2022",
     "module": "es2020",
-    "types": ["jest"],
-    "lib": ["es2020", "dom"]
+    "types": [
+      "jest"
+    ],
+    "lib": [
+      "es2020",
+      "dom"
+    ],
+    "useDefineForClassFields": false
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
