--- a/portal-frontend/package.json
+++ b/portal-frontend/package.json
@@ -35,12 +35,12 @@
     "@angular/cli": "~15.1.2",
     "@angular/compiler-cli": "^15.1.1",
     "@golevelup/ts-jest": "^0.3.4",
-    "@types/jasmine": "~4.0.0",
-    "@types/jest": "^29.2.4",
+    "@types/jest": "^28.1.1",
     "@typescript-eslint/eslint-plugin": "5.37.0",
     "@typescript-eslint/parser": "5.37.0",
     "eslint": "^8.32.0",
-    "jest": "^29.3.1",
+    "jest": "^28.1.3",
+    "jest-preset-angular": "^12.2.5",
     "prettier": "^2.8.3",
     "typescript": "4.9.4"
   }
