--- a/portal-frontend/package.json
+++ b/portal-frontend/package.json
@@ -19,6 +19,7 @@
     "@angular/core": "^15.1.1",
     "@angular/forms": "^15.1.1",
     "@angular/material": "^14.0.5",
+    "@angular/material-moment-adapter": "^14.2.7",
     "@angular/platform-browser": "^15.1.1",
     "@angular/platform-browser-dynamic": "^15.1.1",
     "@angular/router": "^15.1.1",
