--- a/portal-frontend/package.json
+++ b/portal-frontend/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "^15.1.1",
     "@bcgov/bc-sans": "^1.0.1",
     "jwt-decode": "^3.1.2",
+    "ngx-mask": "^15.0.2",
     "rxjs": "~7.5.0",
     "source-map-support": "^0.5.21",
     "tslib": "^2.4.1",
