--- a/portal-frontend/package.json
+++ b/portal-frontend/package.json
@@ -18,12 +18,14 @@
     "@angular/compiler": "^15.1.1",
     "@angular/core": "^15.1.1",
     "@angular/forms": "^15.1.1",
-    "@angular/material": "^14.0.5",
+    "@angular/material": "^15.1.1",
+    "@angular/material-moment-adapter": "^15.1.1",
     "@angular/platform-browser": "^15.1.1",
     "@angular/platform-browser-dynamic": "^15.1.1",
     "@angular/router": "^15.1.1",
     "@bcgov/bc-sans": "^1.0.1",
     "jwt-decode": "^3.1.2",
+    "ngx-mask": "^15.0.2",
     "rxjs": "~7.5.0",
     "source-map-support": "^0.5.21",
     "tslib": "^2.4.1",
@@ -36,8 +38,8 @@
     "@angular/compiler-cli": "^15.1.1",
     "@golevelup/ts-jest": "^0.3.4",
     "@types/jest": "^28.1.1",
-    "@typescript-eslint/eslint-plugin": "5.37.0",
-    "@typescript-eslint/parser": "5.37.0",
+    "@typescript-eslint/eslint-plugin": "5.49.0",
+    "@typescript-eslint/parser": "5.49.0",
     "eslint": "^8.32.0",
     "jest": "^28.1.3",
     "jest-preset-angular": "^12.2.5",
