--- a/.github/workflows/cd-dev.yml
+++ b/.github/workflows/cd-dev.yml
@@ -20,9 +20,10 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - name: Create Pull Request
-        uses: peter-evans/create-pull-request@v4
-        with: 
-          base: main
-          branch: develop
-
+      - name: pull-request
+        uses: repo-sync/pull-request@v2
+        with:
+          destination_branch: "main"
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          pr_label: "deploy, automated pr"
+          pr_title: "Deployment PR"
