--- a/.github/workflows/cd-dev.yml
+++ b/.github/workflows/cd-dev.yml
@@ -20,10 +20,15 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - name: pull-request
+      - name: Git Diff
+        run: |
+          DIFF=$(git log --left-right --graph --cherry-pick --oneline main..develop)
+          echo "git_diff=$DIFF" >> $GITHUB_ENV
+      - name: Pull request
         uses: repo-sync/pull-request@v2
         with:
           destination_branch: "main"
           github_token: ${{ secrets.GITHUB_TOKEN }}
           pr_label: "deploy, automated pr"
           pr_title: "Deployment PR"
+          pr_body: "${{ env.git_diff }}"
