--- a/.gitignore
+++ b/.gitignore
@@ -11,5 +11,5 @@ openshift/tenant-gitops-aa5cf88
 openshift/tenant-gitops-aa5cf88.pub
 node_modules/
 /test-results/
-/playwright-report/
-/playwright/.cache/
+playwright-report/
+playwright/.cache/
