--- a/services/package.json
+++ b/services/package.json
@@ -26,7 +26,7 @@
     "alcs:typeorm:cli": "node --require ts-node/register ./node_modules/typeorm/cli.js",
     "alcs:migration:generate": "npm run alcs:typeorm -- migration:generate apps/alcs/src/providers/typeorm/migrations/$npm_config_name",
     "alcs:migration:create": "npm run alcs:typeorm:cli migration:create apps/alcs/src/providers/typeorm/migrations/$npm_config_name",
-    "alcs:migration:run": "npm run alcs:typeorm migration:run",
+    "alcs:migration:run": "npm run alcs:typeorm migration:run"
   },
   "dependencies": {
     "@automapper/classes": "^8.7.7",
